GUI - ListView: Bugfix for offset in columns when scrollbar is visible

--- a/src/themes/_base.less
+++ b/src/themes/_base.less
@@ -326,7 +326,7 @@ body, input, button, textarea, label, select {
  * GUIListView
  */
 .GUIListView {
-  background : @theme_input_bg_color;
+  background : @theme_secondary_bg_color;
   border : 1px solid @theme_secondary_border_color;
   box-shadow: @theme_input_shadow;
 }
@@ -346,6 +346,9 @@ body, input, button, textarea, label, select {
 .GUIListView .Resizer {
   border-color : @theme_secondary_border_color;
   cursor : ew-resize;
+}
+.GUIListView .Scroll {
+  background : @theme_input_bg_color;
 }
 
 /**
